--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meteor-crud",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor npm install; meteor run"
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
